--- a/package.json
+++ b/package.json
@@ -7,7 +7,14 @@
   "dependencies": {
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-scripts": "4.0.0"
+    "react-scripts": "4.0.0",
+    "react-router-dom": "^4.2.2",
+    "@material-ui/core": "^4.3.3",
+    "@material-ui/icons": "^4.2.1",
+    "@material-ui/lab": "^4.0.0-alpha.24",
+    "@material-ui/pickers": "^3.2.5",
+    "@material-ui/styles": "^4.3.3",
+    "react-infinite-scroll-component": "4.1.0"
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
